Adjust fix header left alignment when logged-out

--- a/client/my-sites/plugins/search-box-header/style.scss
+++ b/client/my-sites/plugins/search-box-header/style.scss
@@ -105,13 +105,16 @@
 			position: fixed;
 			z-index: 20;
 			top: var( --masterbar-height );
-			left: calc( var( --sidebar-width-max ) + 1px );
 			width: calc( 100% - var( --sidebar-width-max ) - 1px );
 			max-width: 100%;
 			padding: 10px 32px;
 			box-sizing: border-box;
 			border-bottom: 1px solid var( --studio-gray-5 );
 			background-color: var( --studio-white );
+
+			.layout__secondary ~ .layout__primary & {
+				left: calc( var( --sidebar-width-max ) + 1px );
+			}
 		}
 
 	}
